--- a/index.qmd
+++ b/index.qmd
@@ -85,7 +85,7 @@ for you to solve independently at your own pace.
 - **Main topic**: Premature optimization
 - **In class walkthrough:** Exercises 3.4 (Chapter 3, CSWR) + 5.1-5.2 (Chapter
   5, CSWR)
-- **Solutions**: TBA
+- **Solutions**: [Exercise 3 Solutions](exercises/U3.qmd)
 
 #### Lecture 6: Monte Carlo Methods and Importance Sampling
 
